fixing jumbotron image alignment problem in ffx
GYMX-86

--- a/static/sass/_home.scss
+++ b/static/sass/_home.scss
@@ -1,3 +1,8 @@
+.home.jumbotron
+{
+	padding: 10px 0;
+}
+
 .home
 {
 
